--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
         classpath Classpaths.build_gradle_version
         classpath Classpaths.kotlin_gradle_plugin
         classpath Classpaths.hilt_gradle_plugin
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.20'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
